# agent-layer-python

./: LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/agent_layer/: __init__.py  a2a.py  ag_ui.py  agent_identity.py  agent_onboarding.py  agents_txt.py  analytics.py  api_keys.py  async_utils.py  auth_handler.py  discovery.py  error_handler.py  errors.py  identity_handler.py  llms_txt.py  mcp.py  oauth2.py  oauth2_handler.py  rate_limit.py  rate_limits.py  robots_txt.py  security_headers.py  types.py  unified_discovery.py  x402.py  x402_client.py  x402_handler.py
src/agent_layer/core/: __init__.py  a2a.py  ag_ui.py  agent_identity.py  agent_meta.py  agents_txt.py  analytics.py  api_keys.py  discovery.py  errors.py  llms_txt.py  mcp.py  oauth2.py  rate_limit.py  unified_discovery.py  x402.py
src/agent_layer/django/: __init__.py  a2a.py  ag_ui.py  agent_identity.py  agent_onboarding.py  agents_txt.py  analytics.py  api_keys.py  app.py  auth.py  discovery.py  errors.py  llms_txt.py  mcp.py  meta.py  middleware.py  oauth2.py  rate_limits.py  robots_txt.py  security_headers.py  unified_discovery.py  views.py  x402.py
src/agent_layer/fastapi/: __init__.py  a2a.py  ag_ui.py  agent_identity.py  agent_onboarding.py  agents_txt.py  analytics.py  api_keys.py  app.py  auth.py  discovery.py  errors.py  llms_txt.py  mcp.py  meta.py  middleware.py  oauth2.py  rate_limits.py  robots_txt.py  security_headers.py  unified_discovery.py  x402.py
src/agent_layer/flask/: __init__.py  a2a.py  ag_ui.py  agent_identity.py  agent_onboarding.py  agents_txt.py  analytics.py  api_keys.py  app.py  auth.py  discovery.py  errors.py  llms_txt.py  mcp.py  meta.py  middleware.py  oauth2.py  rate_limits.py  robots_txt.py  security_headers.py  unified_discovery.py  x402.py
src/agent_layer/score/: README.md  __init__.py  cli.py  reporter.py  scanner.py  types.py
src/agent_layer/score/checks/: __init__.py  ag_ui.py  agents_txt.py  content_type.py  cors.py  discovery.py  llms_txt.py  openapi.py  rate_limits.py  response_time.py  robots_txt.py  security_headers.py  structured_errors.py  utils.py  x402.py
tests/: test_a2a.py  test_ag_ui.py  test_agent_identity.py  test_agent_meta.py  test_agent_onboarding.py  test_agents_txt.py  test_analytics.py  test_api_keys.py  test_async_utils.py  test_auth_handler.py  test_core_identity.py  test_core_x402.py  test_discovery.py  test_django.py  test_django_a2a.py  test_django_adapters.py  test_django_ag_ui.py  test_django_agent_identity.py  test_django_agent_onboarding.py  test_django_e2e.py  test_django_integration.py  test_django_robots_txt.py  test_django_security_headers.py  test_django_x402.py  test_error_handler.py  test_errors.py  test_fastapi.py  test_fastapi_a2a.py  test_fastapi_agent_identity.py  test_fastapi_agent_onboarding.py  test_fastapi_e2e.py  test_fastapi_integration.py  test_fastapi_mcp.py  test_fastapi_robots_txt.py  test_fastapi_security_headers.py  test_fastapi_x402.py  test_flask.py  test_flask_a2a.py  test_flask_adapters.py  test_flask_ag_ui.py  (+20 more)
