[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-layer"
version = "0.1.0"
description = "Python middleware to make web apps AI-agent-friendly — errors, rate limits, llms.txt, discovery"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Isaac Chang", email = "chang.isaac97@gmail.com" },
]
keywords = ["ai", "agent", "llm", "middleware", "fastapi", "agent-native"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0", "starlette>=0.27.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "fastapi>=0.100.0",
    "uvicorn>=0.29",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://company.lightlayer.dev"
Repository = "https://github.com/lightlayer-dev/agent-layer-python"
Issues = "https://github.com/lightlayer-dev/agent-layer-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_layer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
